# raw-editor

./: .gitignore  Cargo.toml  app.js  devbox.json  index.html  package.json  pnpm-lock.yaml  readme.md  rust-toolchain  svelte.config.js  system-diagram.excalidraw  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
cli/: build:wasm.sh  setup-rust.sh
raw-processor/: decode.rs  dispatch_event_to_js.rs  editor.rs  edits.rs  image_processor.rs  lib.rs  operation_type.rs
rust-raw/: lib.rs
src/: App.svelte  Layout.svelte  Main.svelte  app.css  app.html  hooks.server.ts
src/lib/: app.js  app.ts
src/lib/components/: Button.svelte  ImageCanvas.svelte  ImageUpload.svelte  ScreenLogger.svelte
src/lib/components/editor/: ImageCanvas.svelte  Toolbar.svelte
src/lib/components/operations/: Contrast.svelte  Exposure.svelte  Rotation.svelte
src/lib/components/operations/ui/: Slider.svelte
src/lib/helpers/: dblTapAction.ts  decodeEvents.ts
src/lib/state/: canvas.ts  createSyncedControlState.svelte.ts  currentImageData.ts  currentRawImage.ts  imageEdits.ts  imageOperations.ts  useRawImage.ts
src/lib/workers/: index.ts  raw-processor.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/edit/: +page.svelte
