[package]
name = "raw-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
# use a custom rawler version which patches the tokio dependency, specifying tokio to use the feature flag "rt" which supports wasm
rawler = { git = "https://github.com/hongkiulam/dnglab" }
getrandom = { version = "0.2.3", features = ["js"] }
log = "0.4.21"
image = "0.24" # this matches the version used by rawler
serde = { version = "1.0.203", features = ["derive"] } # derive allows types to be derived from serde
serde-wasm-bindgen = "0.6.5"

[lib]
crate-type = ["cdylib"]
path = "rust-raw/lib.rs"
